--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,14 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
 
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.5'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.6'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.2.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -48,10 +50,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.android.material:material:<version>'
     implementation 'com.hbb20:ccp:2.5.0'
-    implementation'androidx.browser:browser:1.2.0'
-    implementation 'androidx.paging:paging-runtime:2.1.2'
+    implementation'androidx.browser:browser:1.4.0'
+    implementation 'androidx.paging:paging-runtime:3.1.1'
     implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
-    implementation 'com.squareup.picasso:picasso:2.71828'
+
 
 
 }
