--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         tools:targetApi="31">
         <activity
             android:name=".SignUp"
-            android:exported="false" />
+            android:exported="true" >
+
+        </activity>
         <activity
             android:name=".OtpActivity"
             android:exported="false" />
@@ -32,10 +34,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
     </application>
 
 </manifest>
